# ChangeLog for dev-ruby/bundler
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bundler/ChangeLog,v 1.84 2015/05/03 11:54:54 jer Exp $

  03 May 2015; Jeroen Roovers <jer@gentoo.org> bundler-1.7.3.ebuild:
  Stable for PPC64 (bug #542574).

  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> bundler-1.7.3.ebuild:
  ppc stable wrt bug #542574

*bundler-1.8.7 (24 Apr 2015)

  24 Apr 2015; Hans de Graaff <graaff@gentoo.org> +bundler-1.8.7.ebuild:
  Version bump.

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> bundler-1.7.3.ebuild:
  Stable for ia64, wrt bug #542574

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> bundler-1.7.3.ebuild:
  Stable for alpha, wrt bug #542574

  20 Mar 2015; Hans de Graaff <graaff@gentoo.org> bundler-1.7.13.ebuild:
  Add ruby22.

  13 Mar 2015; Jeroen Roovers <jer@gentoo.org> bundler-1.7.3.ebuild:
  Stable for HPPA (bug #542574).

  25 Feb 2015; Hans de Graaff <graaff@gentoo.org> bundler-1.7.13.ebuild:
  Restrict tests since they use the network.

*bundler-1.7.13 (25 Feb 2015)

  25 Feb 2015; Hans de Graaff <graaff@gentoo.org> +bundler-1.7.13.ebuild:
  Version bump.

  24 Jan 2015; Hans de Graaff <graaff@gentoo.org> -bundler-1.3.5.ebuild:
  Cleanup vulnerable version for bug 523798.

  24 Jan 2015; Agostino Sarubbo <ago@gentoo.org> bundler-1.7.3.ebuild:
  Stable for x86, wrt bug #523798

  24 Jan 2015; Agostino Sarubbo <ago@gentoo.org> bundler-1.7.3.ebuild:
  Stable for amd64, wrt bug #523798

  24 Jan 2015; Hans de Graaff <graaff@gentoo.org> bundler-1.7.3.ebuild:
  Drop ruby21 to create stable candidate.

  05 Jan 2015; Hans de Graaff <graaff@gentoo.org> bundler-1.7.4.ebuild:
  Restrict tests since they require a network connection, fixing bug 527350.

  04 Jan 2015; Hans de Graaff <graaff@gentoo.org> -bundler-1.3.5-r1.ebuild,
  -bundler-1.3.6.ebuild:
  Cleanup.

  18 Nov 2014; Manuel Rüger <mrueg@gentoo.org>