@@ -5,16 +5,18 @@ DIST bundler-1.7.13.gem 307200 SHA256 a3c7f6fa006c62c88acd21655eaa31dd6731cdd5a7
 DIST bundler-1.7.3.gem 299520 SHA256 d2cfd2cb30a14bbaab0cef7917d220d6285d6eaed024e445680b47c816592303 SHA512 2e037837fa2e9fdb85b7a04aa4cfb79b4be64dab4a4cd45af55b2b2cab69c1c377543fda732db26b32c1c4a8dc8c82e609b908633887a61ca3ad16a00ea22557 WHIRLPOOL a01a46c89a20eda57329fb30e4711392632a68151aeac935fdd8ee51d62bac0b0a08835c69798f31aa655a87284bf1066390c9e38782111cf0d5f3b6fdd6e688
 DIST bundler-1.7.4.gem 301568 SHA256 09414b2dedd098bab278a46bd9a10b9cf6b409e06bb90f40ae001d60fe015388 SHA512 59e8fdc93a006069c550249707b686474b2eed7397448788450bb23382158b168e138adc91d5bb317309b54589dc4406080bc39f3e3cd319514b2c7433f5e0d8 WHIRLPOOL 672355c3bafc34bed3eb366c033faa023d3f0b9aef837c6c5822222e233a794d25095ef46c97c320d49defdd184a8081d5e49dd14a12f094ebc5c619a823a9bc
 DIST bundler-1.8.7.tar.gz 290114 SHA256 4f84a38a355cc466ebdd75ac578949cacfa0c18bae39439dbb3c78790b03d80e SHA512 c1471e1a738168393c19eff02040870eac863dd6f9533824abb2115c829f015c6a8c919fcdbca4f770b3e539044d7f652ef768cb9a7771a92e34f4512d7c107a WHIRLPOOL 4d1ce585fdc5141c8a367296045806b6be30cf4b00f0ea8415c0f16effd9747803529c28726465ad1e8d29b77f9e4392533856cba850ddef2a479bcb4283fd35
+DIST bundler-1.8.8.tar.gz 290336 SHA256 6c290bbf87ceab5ca2c91ee9af3e7f65f17e27a95e47182b4d7129e1506bd9c2 SHA512 bf93a4031c89fe9bbdcde77010446de10dff019bf12a6cdd71ea1f7155d8cb7701ecac8a3adae196806242d298d0a0f9806288b370d253dcd0f0e0c47b415a97 WHIRLPOOL d75055407236f4bee045c917d47caa356aabb004bfc2258cbf07c74143461e3192588409ab9a4700adf6e2c1a8f46d894f60c008fc65647c93564020e95ca09f
 EBUILD bundler-1.7.13.ebuild 2123 SHA256 02d34ad6f5f07f1d1517a08c2ed1aed5975a6fab5e5452274efff3b6ce7dada0 SHA512 2cd37711711e574aaeacb888d5f8096f6d76a6fc1a92d60b0a690adc7c670bbdb3803fb9bd233bdcb8366bbd5791da4f8235d4c6aa17396b52016b1e20ce461f WHIRLPOOL 81fc38ab36c58e835eaf7bb1836be7486c73cf442450ceb12ac0b2c2c39ad5abbf32ffd3a5f918c75927158a0fc479ed74df75726fb278e7c1935f9e54373c2a
 EBUILD bundler-1.7.3.ebuild 2004 SHA256 50c02e81d2d4d8f42a7e171a20d730ce61791d5ca11c394766a6dc1dbf25e332 SHA512 8ed7fe7b14a75f4d139fad0e67b109d008bfdf13ef20b9a8792256329ef9ef37bb687faf44e934390dd720af3053ac0097afe85e44c194e80775fdcd941af91b WHIRLPOOL c5a83ec52afaed8cf0477161bbdcd8e6c1c9bc995ae8d13b2d0e9269908bab0ddae389835cfbdc07e07374df56ee10e3ddfaa96a935ed63549c7e781f71eeb6f
 EBUILD bundler-1.7.4.ebuild 2114 SHA256 37afef4e5d7dceb077311ec55f874fb2bd1c26a350a6fef148f4cfd85f22c7f9 SHA512 b209eb0be67a624e3ee13b292126ec064fa694e9bd420683d0bbc5793a2c7fad442b578e740970757fe6c39b41fcffb28397e9c776d44b385fe0383ac1c8e2b6 WHIRLPOOL ebe63ce0e602ff948fbc0a311a4e1b3dabb0c7ecb3de1700ee90284f02016d226f4bab0adfe69f442c4e3260e18dfa8137365c9167f9bcda0056e2ace3613ffc
 EBUILD bundler-1.8.7.ebuild 2206 SHA256 05ccbf6785e1ef1ad25fb2cc3a3d4d7171cd80ec087047cd6377a115617526dd SHA512 306872205dfeaf444d28b9097326a36238b6f1d07cace4d2d3268e88e1c56f15a64b971b08bd8562e8e46fc317d0e92bbae10bb652f33705933816bf369cb045 WHIRLPOOL 3a0a905441195448964e9ff7263ff0bfb9bb13cbe6a13825ad637d666ffea29917a848c8d8b8a3d1f8cc7e8d6a3bd678e454f90a60a1ab888c96b1d738a578e9
-MISC ChangeLog 10687 SHA256 ee13ce6e8d4f13706a1c977f26e1d3556cae9364894d5bad24ac9d91d5f7facb SHA512 35dc7ac443b72b2caf59cc1ebf03d4d9813916714df19c0813cd666b7bce876ef6355f614026af20cdf89befedd58e41c2358cc7c1975e20c60633e245e328c9 WHIRLPOOL 922fa969487be9dbbe47d2dade25ffd6c3459513e49a100f397b3c94177dc71544a34738e756acc52220d25bd8bc105313882b039176faaafbed7225c2171125
+EBUILD bundler-1.8.8.ebuild 2206 SHA256 5f072bd2fdc67ea2b49d63e0ba89b23f431f9ff8509e3283e017b02f14065cb0 SHA512 83c05e16e92e2394c824ddb044aa06a6c61267e6403131eb85eed3b866eae0c189dc687cefa1069db42fa12569515de5814c742e224c6b83254bd7aa12fd28d7 WHIRLPOOL 4d0fed32feaaee3af987417e6080ff2c16e9ad1ef383dd66488dfdfa98ffd3ce1c81bd8bf888b7cf0d353e16ed583344690f0ba6e88b870722b89dfa876a56af
+MISC ChangeLog 10811 SHA256 80d001e0a84f874d8c47e1b62f57807781c2e1b24ffa33d7ef42ee6d8af5941b SHA512 2b244adc8ee085b8d41aebc17d27791efa0663650e3be7e5923f84fb9d7ad6cff6d13a5958cd6e5bd0a64f6ff1dbb7150b2de4b1be4a0a791e92992c3163a95b WHIRLPOOL 6bf4b9b49898b4363ee6c07bd732f3fec613d22839092a5fba0092959c19cd78dcce95f363133d97a700df0d51c3f67e73b6edf611d3e640a1bf63f3c755d6c5
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVGDI8ACgkQVWmRsqeSphNengCdGO/SM/b6h2zTpUtqubLGZrDg
-QWcAn1AvHcrBiTsr2miaY6ZduK3pD/Cd
-=mPtn
+iF4EAREIAAYFAlVGfCIACgkQiIP6VqMIqNdSuwD+K/KVkHO+YCFeqPUDjW30inEW
+RlmMnhXQGHpsuBFHyEMBAIcMlw0Je/z4ZKCOdgToH5sXITJLvZIvaay9SxAAXOqt
+=odoh
 -----END PGP SIGNATURE-----
