@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/bundler
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bundler/ChangeLog,v 1.84 2015/05/03 11:54:54 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bundler/ChangeLog,v 1.86 2015/05/03 19:50:53 graaff Exp $
+
+*bundler-1.8.8 (03 May 2015)
+
+  03 May 2015; Hans de Graaff <graaff@gentoo.org> +bundler-1.8.8.ebuild:
+  Version bump. 
 
   03 May 2015; Jeroen Roovers <jer@gentoo.org> bundler-1.7.3.ebuild:
   Stable for PPC64 (bug #542574).
